--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.13",
     "mongoose-type-email": "^1.1.2"
+  },
+  "engines": {
+    "node": "16.1"
   }
 }
