--- a/package.json
+++ b/package.json
@@ -19,11 +19,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.13",
     "mongoose-type-email": "^1.1.2",
-<<<<<<< HEAD
-    "ra-expressjs-mongodb-scaffold": "^1.0.0"
-=======
+    "ra-expressjs-mongodb-scaffold": "^1.0.0",
     "socket.io": "^4.1.2"
->>>>>>> 09edddb0af01c5450964e22f07e8d345e9199143
   },
   "engines": {
     "node": "16.1"
