--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.13",
     "mongoose-type-email": "^1.1.2",
+    "nodemon": "^2.0.9",
     "ra-expressjs-mongodb-scaffold": "^1.0.0"
   },
   "engines": {
